v1.0.0/modules/schema/pages/class/ISOStandard.adoc
= `ISOStandard`
:toclevels: 4


+++Standard published by ISO (International Organization for Standardization).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ISOStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ISOStandard`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<standardEdition,`standardEdition`>>
| 0..1
| xref::enumeration/ISOStandardEditionKind.adoc[`ISOStandardEditionKind`]
| +++Edition of ISO standard.+++

| <<standardNumber,`standardNumber`>>
| 0..1
| xref::enumeration/ISOStandardKind.adoc[`ISOStandardKind`]
| +++ISO standard number.+++
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of ISO standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/ISOStandardEditionKind.adoc[`ISOStandardEditionKind`]


|===

//[discrete]
[#standardNumber]
=== `standardNumber`
+++ISO standard number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/ISOStandardKind.adoc[`ISOStandardKind`]


|===


